# auto-evolution-products

./: README.md
.github/scripts/: daily_automation.py  send_email_report.py
.github/workflows/: README.md  daily-automation.yml
automation/daily-reports/: 2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-03-31.md  2026-04-01.md  2026-04-02.md  2026-04-03.md  2026-04-04.md  2026-04-05.md  2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-18.md  2026-04-19.md  latest.md
product-2026-03-08-shell-whisperer/: README.md  shell_whisperer.py
product-2026-03-09-smart-process-guardian/: README.md  process_guardian.py
product-2026-03-10-semantic-fs/: README.md  pyproject.toml
product-2026-03-10-semantic-fs/semantic_fs/: __init__.py  cli.py  config.py  embedder.py  indexer.py  project_view.py  qa.py  reader.py  store.py
